@@ -22,7 +22,16 @@ if ! test "$ac_cv_lib_fc14audiodecoder_fc14dec_new" = yes; then
     AC_MSG_ERROR([libfc14audiodecoder not found])
 fi
 
-PKG_CHECK_MODULES(audacious, audacious >= 3.1)
+PKG_CHECK_EXISTS([Audacious 3.2], [audacious >= 3.2],
+    AC_MSG_ERROR([Could not find Audacious 3.2 API pkgconfig file.]))
+
+PKG_CHECK_MODULES([GTK], [gtk+-3.0 >= 3.0.0], [], AC_MSG_ERROR([Could not find GTK+ >= 3.]))
+AC_SUBST([GTK_CFLAGS])
+AC_SUBST([GTK_LIBS])
+
+PKG_CHECK_MODULES([GLIB], [glib-2.0], [], AC_MSG_ERROR([Could not find GLib 2.]))
+AC_SUBST([GLIB_CFLAGS])
+AC_SUBST([GLIB_LIBS])
 
 AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
