@@ -5,7 +5,7 @@ pkglibdir = `${PKG_CONFIG} audacious --variable=input_plugin_dir`
 pkglib_LTLIBRARIES = fcdecoder.la
 
 fcdecoder_la_LDFLAGS = -module -avoid-version
-fcdecoder_la_CFLAGS = $(audacious_CFLAGS)
+fcdecoder_la_CFLAGS = $(audacious_CFLAGS) $(GTK_CFLAGS) $(GLIB_CFLAGS)
 fcdecoder_la_LIBADD = $(audacious_LIBS)
 
 fcdecoder_la_SOURCES = \
